Updated index.html with additional information

--- a/index.html
+++ b/index.html
@@ -28,6 +28,49 @@
             <li>Network Access Control: NAC solutions enforce security policies by regulating access to network resources based on user identity, device health, and compliance status.</li>
         </ul>
     </section>
-    <!-- Other sections will follow the same structure -->
+    <section id="cryptography">
+        <h2>Cryptography</h2>
+        <p>Cryptography is the practice and study of techniques for secure communication in the presence of third parties, often referred to as adversaries.</p>
+        <p>Topics include:</p>
+        <ul>
+            <li>Encryption: Encryption is the process of converting plaintext into ciphertext to secure the content of a message or data.</li>
+            <li>Key Management: Key management involves the generation, exchange, storage, use, and replacement of cryptographic keys to maintain secure communication.</li>
+            <li>Public Key Infrastructure (PKI): PKI is a set of hardware, software, policies, and standards used to create, manage, distribute, use, store, and revoke digital certificates.</li>
+        </ul>
+    </section>
+    <section id="threats">
+        <h2>Threats, Attacks & Vulnerabilities</h2>
+        <p>Understanding threats, attacks, and vulnerabilities is crucial for implementing effective security measures to protect systems and data.</p>
+        <p>Topics include:</p>
+        <ul>
+            <li>Malware: Malicious software designed to disrupt, damage, or gain unauthorized access to computer systems or data.</li>
+            <li>Social Engineering: Manipulating individuals to disclose confidential information or perform actions that compromise security.</li>
+            <li>Denial of Service (DoS): Attacks aimed at making a machine or network resource unavailable to users by disrupting services or connectivity.</li>
+            <li>Zero-Day Exploits: Exploiting vulnerabilities in software or hardware that are unknown to the vendor and for which no patch is available.</li>
+        </ul>
+    </section>
+    <section id="identity">
+        <h2>Identity and Access Management</h2>
+        <p>Identity and Access Management (IAM) ensures that only authorized individuals and devices have access to resources, systems, and data.</p>
+        <p>Topics include:</p>
+        <ul>
+            <li>Authentication: Verifying the identity of users or devices attempting to access a system or application.</li>
+            <li>Authorization: Granting or denying specific privileges or access rights to authenticated users or devices.</li>
+            <li>Single Sign-On (SSO): Allowing users to authenticate once and access multiple applications or systems without re-authentication.</li>
+            <li>Multi-factor Authentication (MFA): Requiring two or more forms of authentication to verify the identity of users or devices.</li>
+        </ul>
+    </section>
+    <section id="risk">
+        <h2>Risk Management</h2>
+        <p>Risk management involves identifying, assessing, and mitigating potential risks to an organization's assets, operations, and reputation.</p>
+        <p>Topics include:</p>
+        <ul>
+            <li>Risk Assessment: Evaluating the likelihood and impact of risks to determine their significance and prioritize mitigation efforts.</li>
+            <li>Security Controls: Implementing measures to reduce the likelihood or impact of security risks, such as encryption, access controls, and monitoring.</li>
+            <li>Incident Response: Establishing procedures to detect, respond to, and recover from security incidents in a timely and effective manner.</li>
+            <li>Business Continuity Planning: Developing strategies and procedures to ensure the continued operation of critical business functions in the event of a disruption or disaster.</li>
+        </ul>
+    </section>
+    <!-- Additional sections can be added as needed -->
 </body>
 </html>
